# Doing_some_shit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp
src/exercises/: 1_1.cpp  1_2.cpp  1_3.cpp  1_4.cpp  1_5.cpp  1_6.cpp  memory.cpp  pointer.cpp  struct.cpp
